Bugfix: Make buttons display properly when the text is long
This patch fixes the bug that when the text of button is too long, text
will exceed the background of button.

--- a/ui/css/host-admin.css
+++ b/ui/css/host-admin.css
@@ -82,7 +82,7 @@
 .ginger .host-admin button{
     font-weight: bold;
     height: 35px;
-    width: 80px;
+    min-width: 80px;
     vertical-align: top;
 }
 
